--- a/index.html
+++ b/index.html
@@ -2,7 +2,22 @@
 <html>
 <body>
 
-<h1>Erin Danielle Jones</h1>
+<h1>Erin Danielle Jones's Github Data</h1>
+<p></p>
+
+<h2>Class 1</h2><p></p>
+
+<h3>Charts</h3>
+<p></p>
+
+<img src="chart1.png" alt="Chart 1">
+<p></p>
+<img src="chart2.png" alt="Chart 2">
+<p></p>
+<img src="chart4.png" alt="Chart 4">
+<p></p>
+<img src="chart3.png" alt="Chart 3">
+<p></p>
 
 </body>
 </html>
