--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <h3>Charts</h3>
 <p></p>
 
-<img src="chart1.png" alt="Chart 1">
+<img src="chart1.png" alt="Chart 1" width="800";>
 <p></p>
-<img src="chart2.png" alt="Chart 2">
+<img src="chart2.png" alt="Chart 2" width="800";>
 <p></p>
-<img src="chart4.png" alt="Chart 4">
+<img src="chart4.png" alt="Chart 4" width="800";>
 <p></p>
-<img src="chart3.png" alt="Chart 3">
+<img src="chart3.png" alt="Chart 3" width="800";>
 <p></p>
 
 </body>
