--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <body>
 
-<h1>Erin Danielle Jones's Github Data</h1>
+<center><font face=Zapfino><h1>Erin Danielle Jones's Github Data</h1></font face>
+
+<img src="erin.jpg" alt="Erin" height="300px" width="300px"></center>
+<p><p>
+
+<font face=Osaka><u><h2>Class 1</h2></u>
 <p></p>
 
-<h2>Class 1</h2><p></p>
-
-<h3>Charts</h3>
+<b><h3>Charts</h3></b>
 <p></p>
 
 <img src="chart1.png" alt="Chart 1">
@@ -18,6 +21,18 @@
 <p></p>
 <img src="chart3.png" alt="Chart 3">
 <p></p>
+
+<u><h2>Class 2</h2></u>
+<p><p>
+<u><h2>Class 3</h2></u>
+<p><p>
+<u><h2>Class 4</h2></u>
+<p><p>
+<u><h2>Class 5</h2></u>
+<p><p>
+<u><h2>Class 6</h2></u>
+<p><p>
+</font face>
 
 </body>
 </html>
