--- a/index.html
+++ b/index.html
@@ -24,6 +24,44 @@
 
 <u><h2>Class 2</h2></u>
 <p><p>
+
+<div class="desktop">
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 982px; height: 742px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='U.S. Police Shootings (2015) ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='982' height='742' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+<p><p>
+<p><p>
+<div class="phone">
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 324px; height: 589px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='U.S. Police Shootings 2015 Mobile ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-Mobile&#47;U_S_PoliceShootings2015Mobile&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='324' height='589' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='USPolice-InvolvedShootings2015-Mobile&#47;U_S_PoliceShootings2015Mobile' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-Mobile&#47;U_S_PoliceShootings2015Mobile&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+
+<style> 
+@media only screen and (min-width : 982px) and (max-width : 1000px)
+{ .desktop
+{ display: none;
+}
+}
+
+@media only screen and (min-width : 324px) and (max-width : 1000px) 
+{ .phone, .desktop 
+{
+}
+}
+
+@ media only screen and (min-width : 1000px)
+{ .phone, .tablet
+{ display: none; 
+
+}
+}
+
+</style>
+<p><p>
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 654px; height: 742px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='Pie Chart ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-PieChart&#47;PieChart&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='654' height='742' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='USPolice-InvolvedShootings2015-PieChart&#47;PieChart' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-PieChart&#47;PieChart&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+
+<p>For the pie chart above, I used the majority of the same data fields from the map above : Race, Sum of Records, State, City (I removed longitude and latitude.) I really think the pie chart, as well as other charts I went through, fall short in showing the data like the map chart.</p> 
+<p><p>
+<p>I definitely do not think it shows the data in a way that is easy to read and I believe the map in this instance is a much better option overall. The pie chart only shows the amount of people killed in police-involved killings by race, but it does not show the state, city, or any other variables unless you scroll through it. This not only makes it confusing to decipher what the data even means, it makes it hard to read the data. The map chart, however, shows the cities and states where the killings occurred, as well as the race of those killed and the number of those killed in each area. The Other and the Arab-American races are so small, you can barely see them on the pie chart. Meanwhile, you can select them specifically on the map.</p>
+<p><p>
+<p>In another instance, I would most likely exclusively use the pie chart if the only field I wanted to show was race, but even then it does not show the spectrum well in comparison to other chart types. In the end, the pie chart does not come close to matching up with the map at all. I believe using the map was the best choice in this instance.</p>  
+<p><p>
 <u><h2>Class 3</h2></u>
 <p><p>
 <u><h2>Class 4</h2></u>
