--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 <u><h2>Class 2</h2></u>
 <p><p>
-<<<<<<< HEAD
-
+<b><h3>In-Class Assignment</h3></b>
+<p><p>
 <div class="desktop">
 <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 982px; height: 742px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='U.S. Police Shootings (2015) ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='982' height='742' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
 <p><p>
@@ -63,8 +63,11 @@
 <p><p>
 <p>In another instance, I would most likely exclusively use the pie chart if the only field I wanted to show was race, but even then it does not show the spectrum well in comparison to other chart types. In the end, the pie chart does not come close to matching up with the map at all. I believe using the map was the best choice in this instance.</p>  
 <p><p>
-=======
->>>>>>> 1f58308fd7086ad460b877e1d90bbd1cbcc0dc54
+<b><h3>Homework</h3></b>
+<p><p>
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 982px; height: 742px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bi&#47;BirthsbyRacebyZipCode2000-2013&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='982' height='742' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='BirthsbyRacebyZipCode2000-2013&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bi&#47;BirthsbyRacebyZipCode2000-2013&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+<p><p>
+
 <u><h2>Class 3</h2></u>
 <p><p>
 <u><h2>Class 4</h2></u>
