--- a/index.html
+++ b/index.html
@@ -27,35 +27,32 @@
 <b><h3>In-Class Assignment</h3></b>
 <p><p>
 <div class="desktop">
-<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 982px; height: 742px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='U.S. Police Shootings (2015) ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='982' height='742' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 982px; height: 742px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='U.S. Police Shootings (2015) ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='982' height='742' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015&#47;U_S_PoliceShootings2015&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div></div>
 <p><p>
 <p><p>
 <div class="phone">
-<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 324px; height: 589px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='U.S. Police Shootings 2015 Mobile ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-Mobile&#47;U_S_PoliceShootings2015Mobile&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='324' height='589' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='USPolice-InvolvedShootings2015-Mobile&#47;U_S_PoliceShootings2015Mobile' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-Mobile&#47;U_S_PoliceShootings2015Mobile&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 324px; height: 589px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='U.S. Police Shootings 2015 Mobile ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-Mobile&#47;U_S_PoliceShootings2015Mobile&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='324' height='589' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='USPolice-InvolvedShootings2015-Mobile&#47;U_S_PoliceShootings2015Mobile' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-Mobile&#47;U_S_PoliceShootings2015Mobile&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div></div>
+
+<head>
+<meta name ="viewport" content = "width=device-width, initial-scale=1">
 
 <style> 
-@media only screen and (min-width : 982px) and (max-width : 1000px)
+@media only screen and (min-width : 320px) and (max-width : 763px)
 { .desktop
 { display: none;
 }
 }
 
-@media only screen and (min-width : 324px) and (max-width : 1000px) 
-{ .phone, .desktop 
-{
-}
-}
-
-@ media only screen and (min-width : 1000px)
-{ .phone, .tablet
+@media only screen and (min-width : 764px)
+{ .phone 
 { display: none; 
-
 }
 }
 
 </style>
+</head>
 <p><p>
-<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 654px; height: 742px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='Pie Chart ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-PieChart&#47;PieChart&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='654' height='742' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='USPolice-InvolvedShootings2015-PieChart&#47;PieChart' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-PieChart&#47;PieChart&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 654px; height: 742px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='Pie Chart ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-PieChart&#47;PieChart&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='654' height='742' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='USPolice-InvolvedShootings2015-PieChart&#47;PieChart' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USPolice-InvolvedShootings2015-PieChart&#47;PieChart&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div></div>
 
 <p>For the pie chart above, I used the majority of the same data fields from the map above : Race, Sum of Records, State, City (I removed longitude and latitude.) I really think the pie chart, as well as other charts I went through, fall short in showing the data like the map chart.</p> 
 <p><p>
