--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@ WriteNewsStory("Livid Media", "LM", "Friday", 3, 118000000, "Atlanta", 42, 71, "
 
 </script>
 
-
 <u><h2>Class 4</h2></u>
+<p><p>
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 982px; height: 742px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;DM&#47;DMWC83PBB&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='982' height='742' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='path' value='shared&#47;DMWC83PBB' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;DM&#47;DMWC83PBB&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
 <p><p>
 <u><h2>Class 5</h2></u>
 <p><p>
