--- a/index.html
+++ b/index.html
@@ -123,13 +123,83 @@ WriteNewsStory("Macy's", "M", "Wednesday", 3, 118000000, "Cincinnati", 36, 56, "
 
 WriteNewsStory("Livid Media", "LM", "Friday", 3, 118000000, "Atlanta", 42, 71, "Wall Street", "Zacks", 32, 7.8, 10.2, "February", 3.16, 3.26, 5.01, 5.11, 12, "percent", "Standard & Poor's", 500, 6, 17, 12);
 
-
-
 </script>
 
 <u><h2>Class 4</h2></u>
 <p><p>
 <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 982px; height: 742px;'><noscript><a href='http:&#47;&#47;erindaniellej.github.io&#47;Data-Viz-Class-&#47;'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;DM&#47;DMWC83PBB&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='982' height='742' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='path' value='shared&#47;DMWC83PBB' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;DM&#47;DMWC83PBB&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
+<p><p>
+<head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<title>Data Visualization</title>
+<meta charset="utf-8" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+</head>
+<body>
+<div id="icons">
+</div>
+
+<script type="text/javascript">
+
+var beer = 500;
+var heart = 321;
+var tree = 109; 
+
+$('#icons').append("<h1>Mugs</h1>");
+
+for(var i = 0; i < beer; i++){
+	$("#icons").append('<i class="fa fa-beer"></i>');
+}
+
+$("#icons").append('<h1>Hearts</h1>');
+
+for(var i = 0; i < heart; i++){
+	$("#icons").append('<i class="fa fa-heart"></i>');
+}
+
+$("#icons").append('<h1>Trees</h1>');
+
+for(var i = 0; i < tree; i++){
+	$("#icons").append('<i class="fa fa-tree"></i>');
+}
+
+// var classAU = ["Lindsey", "Daniel","Erin", "Alex"];
+// var car = ["VW", "Prius","Toyota", "Landrover"];
+// var entouragenum = [100, 40, 90, 200];
+
+// function WriteNewsStory(companyowner, cartype, entourage){
+// 	$('#icons').append(companyowner + " went backrupt today.<br>");
+// 	$('#icons').append("They drove away in their " + cartype + "<br>");
+// 	$('#icons').append(entourage);
+
+// 	for(var i = 0; i < entourage; i++){
+// 		$('#icons').append('<i class="fa fa-car"></i>');
+// 		console.log("i is " + i);
+// 	}
+
+// }
+
+// for(var i = 0; i < classAU.length; i++) {
+// 	WriteNewsStory(classAU[i], car[i], entouragenum[i]);
+
+// }
+
+// WriteNewsStory(classAU[1]);
+// WriteNewsStory(classAU[2]);
+// WriteNewsStory(classAU[3]);
+// WriteNewsStory(classAU[4]);
+// WriteNewsStory(classAU[5]);
+	
+
+// var classnum = [13, 5, 3, 2, 4];
+
+// var goinghome = [false, true, false, true, true];
+
+// console.log("HELLO I AM " + classAU[0]);
+
+// console.log("There are " + classAU.length + " people in this class");
+
+</script>
 <p><p>
 <u><h2>Class 5</h2></u>
 <p><p>
