--- a/index.html
+++ b/index.html
@@ -205,8 +205,110 @@ for(var i = 0; i < tree; i++){
 <p><p>
 <u><h2>Class 5</h2></u>
 <p><p>
+<head>
+
+<script src="bowercomponents/squared/dist/squared.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  
+  <style type="text/css">
+.squared-geog {
+    background-color: #FDC26D;
+}
+.squared-geog.small {
+    background-color: red;
+    color: white;
+    font-family: 'Lato', sans-serif;
+}
+.squared-geog.medium {
+    background-color: green;
+    color: white;
+    font-family: 'Lato', sans-serif;
+}
+.squared-geog.large {
+    background-color: blue;
+    color: white;
+    font-family: 'Lato', sans-serif;
+}
+  </style>  
+  
+</head> 
+<body>
+<h3>U.S. Women Married in 2014 </h3>
+<div id="map" style="width: 600px; height: 400px"></div>
+<script>
+
+var mydata = [
+{"full_name":"Alabama","name":"AL","marriedwomen":36984},
+{"full_name":"Alaska","name":"AK","marriedwomen":7008},
+{"full_name":"Arizona","name":"AZ","marriedwomen":45674},
+{"full_name":"Arkansas","name":"AR","marriedwomen":25824},
+{"full_name":"California","name":"CA","marriedwomen":249009},
+{"full_name":"Colorado","name":"CO","marriedwomen":44928},
+{"full_name":"Connecticut","name":"CT","marriedwomen":20622},
+{"full_name":"Delaware","name":"DE","marriedwomen":6596},
+{"full_name":"Florida","name":"FL","marriedwomen":117960},
+{"full_name":"Georgia","name":"GA","marriedwomen":72352},
+{"full_name":"Hawaii","name":"HI","marriedwomen":10792},
+{"full_name":"Idaho","name":"ID","marriedwomen":13089},
+{"full_name":"Illinois","name":"IL","marriedwomen":78354},
+{"full_name":"Indiana","name":"IN","marriedwomen":49092},
+{"full_name":"Iowa","name":"IA","marriedwomen":22199},
+{"full_name":"Kansas","name":"KS","marriedwomen":22307},
+{"full_name":"Kentucky","name":"KY","marriedwomen":33888},
+{"full_name":"Louisiana","name":"LA","marriedwomen":30948},
+{"full_name":"Maine","name":"ME","marriedwomen":9272},
+{"full_name":"Maryland","name":"MD","marriedwomen":38888},
+{"full_name":"Massachusetts","name":"MA","marriedwomen":40911},
+{"full_name":"Michigan","name":"MI","marriedwomen":60528},
+{"full_name":"Minnesota","name":"MN","marriedwomen":35995},
+{"full_name":"Mississippi","name":"MS","marriedwomen":21280},
+{"full_name":"Missouri","name":"MO","marriedwomen":42447},
+{"full_name":"Montana","name":"MT","marriedwomen":7551},
+{"full_name":"Nebraska","name":"NE","marriedwomen":13992},
+{"full_name":"Nevada","name":"NV","marriedwomen":21898},
+{"full_name":"New Hampshire","name":"NH","marriedwomen":9379},
+{"full_name":"New Jersey","name":"NJ","marriedwomen":48825},
+{"full_name":"New Mexico","name":"NM","marriedwomen":14463},
+{"full_name":"New York","name":"NY","marriedwomen":117599},
+{"full_name":"North Carolina","name":"NC","marriedwomen":70399},
+{"full_name":"North Dakota","name":"ND","marriedwomen":5590},
+{"full_name":"Ohio","name":"OH","marriedwomen":74174},
+{"full_name":"Oklahoma","name":"OK","marriedwomen":32674},
+{"full_name":"Oregon","name":"OR","marriedwomen":28308},
+{"full_name":"Pennsylvania","name":"PA","marriedwomen":76065},
+{"full_name":"Rhode Island","name":"RI","marriedwomen":5622},
+{"full_name":"South Carolina","name":"SC","marriedwomen":32656},
+{"full_name":"South Dakota","name":"SD","marriedwomen":6343},
+{"full_name":"Tennessee","name":"TN","marriedwomen":49170},
+{"full_name":"Texas","name":"TX","marriedwomen":200374},
+{"full_name":"Utah","name":"UT","marriedwomen":27825},
+{"full_name":"Vermont","name":"VT","marriedwomen":3976},
+{"full_name":"Virginia","name":"VA","marriedwomen":60683},
+{"full_name":"Washington","name":"WA","marriedwomen":53491},
+{"full_name":"West Virginia","name":"WV","marriedwomen":13144},
+{"full_name":"Wisconsin","name":"WI","marriedwomen":35855},
+{"full_name":"Wyoming","name":"WY","marriedwomen":5672}
+];
+
+  map = new Squared("map");
+  map.make();
+     
+    map.data(mydata, "name");
+    console.log(mydata);
+    map.addClass(function(d){
+      if(d.marriedwomen < 10000)
+        return "small";
+       else if(d.marriedwomen < 20000 )
+         return "medium";
+       else return "large";
+    });
+
+</script>
+</body>
+
 <u><h2>Class 6</h2></u>
 <p><p>
+
 </font face>
 
 </body>
