--- a/index.html
+++ b/index.html
@@ -406,7 +406,8 @@ d3.csv("data.csv", function(error, data) {
 
 <u><h2>Class 6</h2></u>
 <p><p>
-
+"I can't believe it's this easy to use Git." 
+<p><p> 
 </font face>
 
 </body>
