--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ d3.csv("data.csv", function(error, data) {
 "I can't believe it's this easy to use Git." 
 <p><p> 
 <h4>QGIS Project - Alex & Paige Presentation</h4>
-<p><img src="map.png" alt="Map for Class" width=600px></p>
+<p><img src="map.png" alt="Map for Class" width="600px"></p>
 <p><p>
 
 </font face>
