--- a/index.html
+++ b/index.html
@@ -409,9 +409,11 @@ d3.csv("data.csv", function(error, data) {
 "I can't believe it's this easy to use Git." 
 <p><p> 
 <h4>QGIS Project - Alex & Paige Presentation</h4>
-<p><img src="map.png" alt="Map for Class" width="600px"></p>
+<p><img src="Map.png" alt="Map for Class" width="600px"></p>
 <p><p>
-
+<h4>Vox Meme Generator - Wendy & Daniel Presentation</h4> 
+<p><img src = “meme.png”></p>
+<p><p>
 </font face>
 
 </body>
