--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ d3.csv("data.csv", function(error, data) {
 <p><img src="Map.png" alt="Map for Class" width="600px"></p>
 <p><p>
 <h4>Vox Meme Generator - Wendy & Daniel Presentation</h4> 
-<p><img src = “meme.png”></p>
+<img src="meme.png">
 <p><p>
 </font face>
 
