--- a/index.html
+++ b/index.html
@@ -414,6 +414,17 @@ d3.csv("data.csv", function(error, data) {
 <h4>Vox Meme Generator - Wendy & Daniel Presentation</h4> 
 <p><img src="meme.png" alt="Meme for Class"></p>
 <p><p>
+<h4>Twitterbot - Natalie & Sonya Presentation</h4> 
+<p>I created a DJ Khaled Bot (@DJKhaledBot). It's supposed to be a motivational quote style
+ bot that targets DJ Khaled's snapchat quotes, however I didn't know how to get that advanced. 
+ The lists it follows are Rappers, DJs and Magazines. As for the keywords it targets, they are 
+ DJKhaled, DJKhaledSnapChat, another one, the key to success, listen and the. So far, it's been 
+ working and updating. Check it out below.</p> 
+<a class="twitter-timeline" href="https://twitter.com/DJKhaledBot" data-widget-id="676133260548808704" width="400px">Tweets by @DJKhaledBot</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<p><p>
+<br>
+
 </font face>
 
 </body>
